# netENwsl

./: LICENCE.md  README.md  README_EN.md  SPECIAL_REPORT.md
00PROJ/: README.md  learning_objectives_matrix.md  pyproject.toml  requirements.txt  ruff.toml
00PROJ/PROJECTS/: P01_SDN_Firewall_Mininet.md  P02_Hybrid_Network_Mininet_Docker.md  P03_IDS_Traffic_Monitoring_Python.md  P04_Secure_Messaging_Client_Server.md  P05_Custom_Routing_Protocol.md  P06_SDN_Mininet_Controller_OpenFlow.md  P07_Firewall_IDS_Traffic_Monitoring.md  P08_Web_Server_Reverse_Proxy.md  P09_Multi_Client_FTP_Server.md  P10_DNS_SSH_FTP_Docker_Orchestration.md  P10_Docker_Network_Configuration.md  P11_Advanced_SDN_Mininet_OpenFlow.md  P12_Docker_Microservices_Load_Balancing.md  P13_Distributed_RPC_Application.md  P13_RPC_gRPC_Service.md  P14_Security_IDS_IPS_Simulation.md  P15_IoT_Edge_Computing_MQTT.md  P15_MQTT_IoT_Client_Server.md  README.md
00PROJ/RESERVE_individual/: P16_HTTP_Analysis_Wireshark.md  P16_Network_Traffic_Analyzer.md  P17_LAN_NAT_DHCP_Network.md  P17_Reserve.md  P18_Reserve.md  P18_TCP_Chat_Client_Server.md  P19_Port_Scanner_Security.md  P19_Reserve.md  P20_IoT_Smart_Home_Security.md  P20_Reserve.md  README.md
00PROJ/formative/: README.md  export_lms.py  quiz_template.yaml  run_quiz.py
00PROJ/templates/: PROJECT_TEMPLATE.md
01enWSL/: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
01enWSL/anti_ai/: __init__.py  challenge_generator.py  evidence_collector.py  fingerprint.py  pcap_tools.py  submission_validator.py
01enWSL/docs/: ci_setup.md  code_tracing.md  commands_cheatsheet.md  concept_analogies.md  formative_assessment.md  further_reading.md  glossary.md  learning_objectives.md  lo_traceability_matrix.md  misconceptions.md  pair_programming_guide.md  parsons_problems.md  peer_instruction.md  theory_summary.md  troubleshooting.md
01enWSL/formative/: README.md  quiz.json  quiz.yaml  quiz_schema.json  run_quiz.py
01enWSL/homework/: README.md
01enWSL/pcap/: CAPTURE_GUIDE.md  generate_demo_pcaps.py
01enWSL/scripts/: capture_traffic.py  cleanup.py  run_demo.py  start_lab.py  stop_lab.py
01enWSL/setup/: VERSIONS.md  configure_docker.py  install_prerequisites.py  requirements.txt  verify_environment.py
01enWSL/tests/: __init__.py  smoke_test.py  test_anti_ai_workflow.py  test_environment.py  test_exercises.py  test_formative_quiz_exports.py
03enWSL/: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
03enWSL/anti_ai/: __init__.py  challenge.py  challenge_generator.py  evidence_collector.py  fingerprint.py  pcap_tools.py  submission_validator.py
03enWSL/docker/: Dockerfile  docker-compose.yml
03enWSL/docs/: case_study_communication_modes.md  ci_setup_guide.md  code_tracing.md  commands_cheatsheet.md  concept_analogies.md  further_reading.md  glossary.md  learning_objectives_matrix.md  misconceptions.md  pair_programming_guide.md  parsons_problems.md  peer_instruction.md  theory_summary.md  troubleshooting.md
03enWSL/formative/: __init__.py  quiz.schema.json  quiz.yaml  quiz_lms_export.json  run_quiz.py
03enWSL/homework/: README.md
03enWSL/pcap/: README.md
03enWSL/scripts/: __init__.py  capture_traffic.py  cleanup.py  run_demo.py  start_lab.py  stop_lab.py
03enWSL/setup/: configure_docker.py  install_prerequisites.py  requirements.txt  verify_checksums.py  verify_environment.py
03enWSL/src/: __init__.py  py.typed
03enWSL/tests/: __init__.py  expected_outputs.md  expected_outputs.py  smoke_test.py  test_anti_ai_workflow.py  test_environment.py  test_exercises.py  test_quiz_export.py
04enWSL/: CHANGELOG.md  Makefile  README.md  manifest.json  pyproject.toml  requirements.txt
04enWSL/anti_ai/: __init__.py  challenge.py  challenge_generator.py  evidence_collector.py  fingerprint.py  pcap_tools.py  submission_validator.py
04enWSL/docker/: Dockerfile  docker-compose.yml
04enWSL/docs/: ci_setup.md  code_tracing.md  commands_cheatsheet.md  concept_analogies.md  expected_outputs.md  further_reading.md  glossary.md  learning_objectives.md  misconceptions.md  pair_programming_guide.md  parsons_problems.md  peer_instruction.md  theory_summary.md  troubleshooting.md
04enWSL/formative/: README.md  quiz.yaml  run_quiz.py
04enWSL/homework/: README.md
04enWSL/pcap/: README.md  week04_lo3_text_commands.pcap  week04_lo4_binary_header.pcap  week04_lo5_tcp_handshake.pcap  week04_lo5_udp_sensor.pcap
04enWSL/scripts/: anti_ai_week04_run.py  capture_traffic.py  cleanup.py  export_quiz_lms.py  generate_pcap_samples.py  run_demo.py  start_lab.py  stop_lab.py  validate_quiz_schema.py  verify_kit_integrity.py  verify_manifest.py
04enWSL/setup/: configure_docker.py  install_prerequisites.py  requirements.txt  verify_environment.py
04enWSL/tests/: smoke_test.py  test_anti_ai_workflow.py  test_environment.py  test_exercises.py  test_lms_exports.py  test_unit_functions.py
05enWSL/: CHANGELOG.md  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
05enWSL/anti_ai/: __init__.py  challenge.py  challenge_generator.py  evidence_collector.py  fingerprint.py  submission_validator.py
05enWSL/docker/: docker-compose.yml
05enWSL/docs/: VERIFICATION_CHECKSUMS.md  ci_setup.md  code_tracing.md  commands_cheatsheet.md  concept_analogies.md  further_reading.md  glossary.md  learning_objectives.md  misconceptions.md  pair_programming_guide.md  parsons_problems.md  peer_instruction.md  theory_summary.md  troubleshooting.md
05enWSL/formative/: __init__.py  export_to_lms.py  quiz.yaml  run_quiz.py
06enWSL/: CHANGELOG.md  Makefile  README.md  checksums.sha256  pyproject.toml
08enWSL/: CHANGELOG.md  Makefile  README.md  pyproject.toml
09enWSL/: CHANGELOG.md  Makefile  README.md  pyproject.toml
11enWSL/: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
12enWSL/: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
13enWSL/: CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
14enWSL/: CHANGELOG.md  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
(+1197 files in other folders)
