# ═══════════════════════════════════════════════════════════════════════════════
# Project Configuration — Computer Networks
# ═══════════════════════════════════════════════════════════════════════════════
#
# This file configures Python project tools including pytest, mypy and coverage.
# Ruff configuration is in a separate ruff.toml file for clarity.
#
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-networks-project"
version = "1.0.0"
description = "Computer Networks Project - ASE Bucharest CSIE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Student Name", email = "student@example.com"},
]
keywords = ["networking", "sdn", "docker", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "bandit>=1.7",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/student/computer-networks-project"
Documentation = "https://github.com/student/computer-networks-project#readme"
Repository = "https://github.com/student/computer-networks-project.git"

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]

# Markers for selective test execution
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require Docker)",
    "slow: Slow tests (skipped by default)",
    "smoke: Smoke tests (critical sanity checks)",
]

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Test timeout (seconds)
timeout = 120

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
# Minimum coverage percentage
fail_under = 60
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true

# Error output
show_error_codes = true
show_error_context = true
show_column_numbers = true

# Strictness (relaxed for student projects)
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

# Exclude patterns
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

# Per-module overrides
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

# ═══════════════════════════════════════════════════════════════════════════════
# BANDIT SECURITY CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = [
    "B101",  # assert_used (fine in tests)
    "B104",  # hardcoded_bind_all_interfaces (common in network code)
    "B311",  # random (fine for non-crypto)
]

# ═══════════════════════════════════════════════════════════════════════════════
# SETUPTOOLS CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.toml"]
