# pyproject.toml
# Week 1 Computer Networks Laboratory Kit
# NETWORKING class — ASE, CSIE | by ing. dr. Antonio Clim

[project]
name = "netenwsl-week1"
version = "1.0.0"
description = "Week 1 Computer Networks Laboratory Kit - Network Fundamentals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ing. dr. Antonio Clim"}
]
keywords = ["networking", "education", "docker", "wsl2", "computer-networks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

dependencies = [
    "docker>=6.0.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
analysis = [
    "scapy>=2.5.0",
    "dpkt>=1.9.8",
]
docs = [
    "python-docx>=0.8.11",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
]
all = [
    "netenwsl-week1[analysis,docs,dev]",
]

[project.scripts]
quiz = "formative.run_quiz:main"

[project.urls]
Repository = "https://github.com/antonioclim/netENwsl"
Documentation = "https://github.com/antonioclim/netENwsl/blob/main/README.md"

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude common non-code directories
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "artifacts",
    "pcap",
    "docker/volumes",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",     # line too long (handled by formatter)
    "B008",     # function calls in argument defaults
    "C901",     # too complex
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "ARG001",   # unused function argument (common in callbacks)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]
"setup/*" = ["PLR"]
"scripts/*" = ["PLR"]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts", "tests", "formative"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false  # Relaxed for educational code
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "dpkt.*",
    "docker.*",
]
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",  # Show extra test summary
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests that require Docker",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["src", "scripts", "formative"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
