[project]
name = "week5-networking-lab"
version = "1.1.0"
description = "Week 5 Computer Networks Laboratory: IP Addressing, Subnetting and VLSM"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", "artifacts", "pcap"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
