# ═══════════════════════════════════════════════════════════════════════════════
# pyproject.toml — Week 6: NAT/PAT & SDN Laboratory
# ═══════════════════════════════════════════════════════════════════════════════
# Computer Networks — ASE, CSIE | by ing. dr. Antonio Clim
#
# This file configures:
#   - Ruff (linter/formatter)
#   - MyPy (type checker)
#   - Project metadata
# ═══════════════════════════════════════════════════════════════════════════════

[project]
name = "week6-networking-lab"
version = "1.0.2"
description = "Week 6 WSL Kit: NAT/PAT & Software-Defined Networking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ing. dr. Antonio Clim", email = "antonio.clim@ie.ase.ro"}
]
keywords = ["networking", "education", "nat", "sdn", "openflow", "mininet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

dependencies = [
    "docker>=6.0.0,<8.0.0",
    "requests>=2.28.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "typing-extensions>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]
sdn = [
    "os-ken>=2.0.0",
    "scapy>=2.5.0",
]

[project.urls]
"Homepage" = "https://github.com/ase-csie/networking-labs"
"Documentation" = "https://docs.example.com/week6"
"Repository" = "https://github.com/ase-csie/networking-labs"

# ═══════════════════════════════════════════════════════════════════════════════
# RUFF CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length (relaxed for educational readability)
line-length = 100

# Directories to include
include = ["*.py"]

# Directories to exclude
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore these specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E731",   # Lambda assignment (used in callbacks)
    "B008",   # Function call in default argument (CLI patterns)
    "SIM108", # Ternary operator (readability preference)
    "UP007",  # Use X | Y for Union (compatibility)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import sorting in __init__.py files
"__init__.py" = ["F401", "I001"]
# Allow print statements in scripts
"scripts/*.py" = ["T201"]
# Allow assert in tests
"tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
# isort configuration
known-first-party = ["src", "scripts", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatting configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════════════════════
# MYPY CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for educational code
ignore_missing_imports = true

# Per-module overrides
[[tool.mypy.overrides]]
module = "mininet.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "os_ken.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scapy.*"
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════════════════════
# PYTEST CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════════════════════
# COVERAGE CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["src", "scripts"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
